# nsm-java

./: Dockerfile  build.sh  clean.sh  entrypoint.sh
.github/workflows/: build.yaml  publish-snapshot.yaml  release.yaml
attestation-aws/: .gitignore  .project  com_uid2_attestation_aws_NitroAttestation.h  pom.xml
attestation-aws/src/main/java/com/uid2/attestation/aws/: NitroAttestation.java  NitroAttestationParams.java  NitroAttestationProvider.java  NitroAttestationRequest.java  NitroException.java
example/: .gitignore  .project  pom.xml
example/src/main/java/com/uid2/example/: Main.java
jnsm/: Cargo.toml
jnsm/src/: lib.rs
vssh/: Dockerfile  app.py  id_rsa.pub  socat
